--- a/css/index_6.scss
+++ b/css/index_6.scss
@@ -60,9 +60,12 @@ body {
     background-color: #fff;
     height: auto;
     margin: 0 20px;
-    margin-top: 110px;
+    margin-top: 90px;
     overflow-y: auto;
     margin-bottom: 50px;
+  }
+  .content_modal {
+    padding: 15px 5px;
   }
   .content_modal .icon_title {
     text-align: left;
