--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,12 @@
 #footer {
   border-top: 1px solid #fff3f6;
-  -moz-box-shadow: 0px -11px 12px #fff4f6;
-  -webkit-box-shadow: 0px -11px 12px #fff4f6;
-  box-shadow: 0px -11px 12px #fff4f6;
+  /*-moz-box-shadow: 0px -11px 12px #fff4f6;*/
+  /*-webkit-box-shadow: 0px -11px 12px #fff4f6;*/
+  /*box-shadow: 0px -11px 12px #fff4f6;*/
   bottom: 0 !important;
   position: fixed;
   background: #fff;
-  /*margin-left: -15px;*/
+  margin-left: -15px;
   width: 100%;
   padding-top: 10px; }
 
