--- a/css/index_10.scss
+++ b/css/index_10.scss
@@ -74,6 +74,7 @@ body {
     text-align: center;
     background: #fff;
     margin-bottom: 30px;
+    padding-top: 0;
     .line {
       margin-top: 80px !important;
     }
@@ -96,7 +97,7 @@ body {
       p {
         font-size: 13px;
         padding-top: 30px;
-        font-family: MontserratBold, serif;
+        font-family: MontserratsemiBold, serif;
       }
     }
     h1 {
