--- a/css/index_2.scss
+++ b/css/index_2.scss
@@ -21,6 +21,7 @@ header {
     p {
       font-size: $size_p;
       font-family: MontserratsemiBold, serif;
+      padding-left: 15px;
     }
   }
   .search {
@@ -55,6 +56,7 @@ content {
   p {
     padding: 10px 20px;
     font-size: 24px;
+    color: #fff;
     font-family: MontserratLight, serif;
   }
 }
