--- a/css/index_4.scss
+++ b/css/index_4.scss
@@ -49,7 +49,7 @@ body {
        }
      }
     .content_feed_2 {
-      padding-top: 30px;
+      padding-top: 20px;
       width: 100%;
       @include background('../imgs/header.png');
       .content_feed_2_close {
@@ -69,13 +69,16 @@ body {
 
     .content_feed_3_back {
       @include icon_map;
+      height: 35px;
+      background-repeat: no-repeat;
+      background-size: contain;
     }
     .newfeed_2_top {
       text-align: center;
       position: relative;
       z-index: 99999;
       padding-top: 15px;
-      padding-bottom: 55px;
+      padding-bottom: 70px;
       p {
         font-family: MontserratLight, serif;
         color: rgba(255, 255, 255, 0.64);
@@ -134,7 +137,7 @@ body {
         border-bottom: 1px solid #bdc0d3;
         .name {
           font-size: 15px;
-          font-family: MontserratLight,serif;
+          font-family: MontserratRegular,serif;
           padding: 10px 0 0 15px;
           color: $color_text;
         }
@@ -163,7 +166,7 @@ body {
           padding: 10px;
           background-size: contain;
           background-repeat: no-repeat;
-          margin-top: 5px;
+          margin-top: 2px;
         }
       }
     }
