--- a/css/index_7.css
+++ b/css/index_7.css
@@ -68,8 +68,7 @@ body {
       text-align: center;
       letter-spacing: 2px;
       padding: 10px;
-      padding-top: 50px;
-      font-family: monsterBold, serif; }
+      font-family: MontserratsemiBold, serif; }
     body header h1 {
       font-family: MontserratLight, serif;
       font-size: 21px;
@@ -98,7 +97,8 @@ body {
       font-size: 21px;
       text-align: center;
       letter-spacing: 2px;
-      font-size: 21px; }
+      font-size: 21px;
+      letter-spacing: 0; }
     body header .title_top p {
       font-family: MontserratsemiBold, serif;
       font-size: 13px;
@@ -119,10 +119,9 @@ body {
         background-size: cover;
         padding-top: 30px;
         background-repeat: no-repeat;
-        margin-top: 42px;
+        margin-top: 15px;
         z-index: 1; }
       body header .header_top span.back {
-        padding-top: 40px;
         font-size: 40px; }
       body header .header_top .cart {
         position: relative; }
@@ -139,12 +138,12 @@ body {
           border-radius: 19px;
           width: 28px;
           height: 28px;
-          margin-top: 34px;
           background: whitesmoke;
           z-index: 2;
           position: absolute;
           margin-left: -30px; }
   body content {
+    letter-spacing: 0;
     background: #fff;
     color: #02135a;
     text-align: center;
@@ -205,7 +204,8 @@ body {
         font-size: 11px;
         text-align: left;
         font-weight: bold;
-        padding: 15px 15px 15px; }
+        padding: 15px 15px 15px;
+        margin: 0; }
     body content .tag_1 {
       border-top: 1px solid #ffadbb;
       height: auto;
@@ -280,7 +280,7 @@ body {
           padding: 8px;
           margin-top: 20px;
           padding: 8px !important;
-          margin-top: 22px !important; }
+          margin-top: 20px !important; }
     body content .touch_slider {
       background-color: #ffe5e0;
       height: 100%;
