--- a/css/index_7.scss
+++ b/css/index_7.scss
@@ -25,8 +25,7 @@ body {
     height: 100%;
     p {
       @include title_top_p_7;
-      padding-top: 50px;
-      font-family: monsterBold, serif;
+      font-family: MontserratsemiBold, serif;
     }
     h1 {
       @include page_7_title_h1;
@@ -59,6 +58,7 @@ body {
       h1 {
         @include page_7_title_h1;
         font-size: 21px;
+        letter-spacing: 0;
       }
       p {
         @include title_top_p_7;
@@ -71,6 +71,9 @@ body {
       display: inline-block;
       width: 100%;
       height: auto;
+      p {
+
+      }
       .content_feed_2_close {
         background: url("../imgs/icon_cart_full.png");
         width: 10px;
@@ -78,12 +81,11 @@ body {
         background-size: cover;
         padding-top: 30px;
         background-repeat: no-repeat;
-        margin-top: 42px;
+        margin-top: 15px;
         z-index: 1;
       }
       span {
         &.back {
-          padding-top: 40px;
           font-size: 40px;
         }
       }
@@ -102,7 +104,6 @@ body {
           border-radius: 19px;
           width: 28px;
           height: 28px;
-          margin-top: 34px;
           background: rgb(245, 245, 245);
           z-index: 2;
           position: absolute;
@@ -114,6 +115,7 @@ body {
 
   /*content 7*/
   content {
+    letter-spacing: 0;
     background: #fff;
     color: #02135a;
     text-align: center;
@@ -189,6 +191,7 @@ body {
         text-align: left;
         font-weight: bold;
         padding: 15px 15px 15px;
+        margin: 0;
       }
     }
     .tag_1 {
@@ -264,7 +267,7 @@ body {
         .price_plus {
           @include produce_price_plus;
           padding: 8px !important;
-          margin-top: 22px !important;
+          margin-top: 20px !important;
         }
       }
     }
