--- a/css/index_10.scss
+++ b/css/index_10.scss
@@ -113,8 +113,8 @@ body {
       p {
         font-size: 11px;
         font-family: MontserratRegular, serif;
-        padding: 10px 5px;
         margin-bottom: 0;
+        letter-spacing: 0;
         &.left {
           border: 1px solid #000;
           border-right: 1px solid #000;
