--- a/css/index_11.css
+++ b/css/index_11.css
@@ -66,16 +66,22 @@ body {
 header {
   padding: 20px 0; }
   header .header_top p {
-    font-size: 13px; }
+    font-size: 13px;
+    font-family: MontserratsemiBold, serif; }
+
+.active {
+  background: #B4B9CE; }
 
 content img {
   height: 100px;
   margin-top: 150px; }
 content h1 {
-  font-size: 21px;
-  padding: 10px 60px; }
+  font-size: 24px;
+  padding: 10px 75px;
+  font-family: MontserratLight, serif; }
 content p {
   font-size: 13px;
-  padding: 10px 70px; }
+  padding: 10px 70px;
+  font-family: MontserratLight, serif; }
 
 /*# sourceMappingURL=index_11.css.map */
