--- a/css/index_11.scss
+++ b/css/index_11.scss
@@ -10,12 +10,17 @@ body {
 }
 
 header {
-  padding:20px 0;
+  padding: 20px 0;
   .header_top {
     p {
       font-size: $size_p;
+      font-family: MontserratsemiBold, serif;
     }
   }
+}
+
+.active {
+  background: #B4B9CE;
 }
 
 content {
@@ -24,12 +29,14 @@ content {
     margin-top: 150px;
   }
   h1 {
-    font-size: $size_h;
-    padding: 10px 60px;
+    font-size: 24px;
+    padding: 10px 75px;
+    font-family: MontserratLight, serif;
   }
   p {
     font-size: $size_p;
     padding: 10px 70px;
+    font-family: MontserratLight, serif;
   }
 }
 
